--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.2.6",
+		"@reduxjs/toolkit": "^2.0.1",
 		"antd": "^5.12.2",
+		"immer": "^10.0.3",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-redux": "^9.0.4",
+		"use-immer": "^0.9.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.43",
