--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"use-immer": "^0.9.0"
 	},
 	"devDependencies": {
+		"@redocly/cli": "^1.6.0",
 		"@types/node": "^20.11.1",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
