--- a/spec.yaml
+++ b/spec.yaml
@@ -103,3 +103,24 @@ components:
               type: string
         tag:
           type: string
+    AGC:
+      type: string
+      enum:
+        - Cement
+        - Cement clinker
+        - Calcined clays
+        - Aluminous cement
+        - Iron or steel products
+        - Crude steel
+        - Direct reduced iron
+        - Pig iron
+        - Alloys
+        - Sintered Ore
+        - Hydrogen
+        - Ammonia
+        - Nitric acid
+        - Urea
+        - Mixed fertilizers
+        - Aluminium products
+        - Unwrought aluminium
+        - Electricity
