docs: require precursors

--- a/spec.yaml
+++ b/spec.yaml
@@ -122,6 +122,7 @@ components:
         - verifier
         - agcs
         - processes
+        - precursors
     AGC:
       type: string
       enum:
