--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@ant-design/icons": "^5.2.6",
 		"@reduxjs/toolkit": "^2.0.1",
 		"antd": "^5.12.8",
+		"dayjs": "^1.11.10",
 		"immer": "^10.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
