--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"devDependencies": {
 		"@redocly/cli": "^1.6.0",
+		"@swc/jest": "^0.2.36",
 		"@types/node": "^20.11.1",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
@@ -32,6 +33,7 @@
 		"eslint": "^8.55.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
+		"jest": "^29.7.0",
 		"postcss": "^8.4.33",
 		"swagger-typescript-api": "^13.0.3",
 		"tailwindcss": "^3.4.1",
