--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@redocly/cli": "^1.6.0",
 		"@swc/jest": "^0.2.36",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.1",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
