--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 	},
 	"devDependencies": {
 		"@redocly/cli": "^1.6.0",
+		"@swc/cli": "^0.3.9",
+		"@swc/core": "^1.4.0",
 		"@swc/jest": "^0.2.36",
 		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.1",
