--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"jest": "^29.7.0",
+		"jest-matcher-deep-close-to": "^3.0.2",
 		"postcss": "^8.4.33",
 		"swagger-typescript-api": "^13.0.3",
 		"tailwindcss": "^3.4.1",
