--- a/compose.yaml
+++ b/compose.yaml
@@ -15,5 +15,5 @@ services:
       - WATCHTOWER_LABEL_ENABLE=1
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ~/.docker/config.json:/config.json
+      - ${HOME}/.docker/config.json:/config.json
     command: --interval 5
