--- a/compose.yaml
+++ b/compose.yaml
@@ -17,3 +17,5 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${HOME}/.docker/config.json:/config.json
     command: --interval 5
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
