--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@reduxjs/toolkit": "^2.0.1",
 		"antd": "^5.12.8",
 		"dayjs": "^1.11.10",
+		"excellentexport": "^3.9.6",
 		"immer": "^10.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
