--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^9.0.4",
-		"use-immer": "^0.9.0"
+		"use-immer": "^0.9.0",
+		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
 	},
 	"devDependencies": {
 		"@redocly/cli": "^1.6.0",
