--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"antd": "^5.12.8",
 		"dayjs": "^1.11.10",
 		"immer": "^10.0.3",
+		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^9.0.4",
@@ -29,6 +30,7 @@
 		"@swc/core": "^1.4.0",
 		"@swc/jest": "^0.2.36",
 		"@types/jest": "^29.5.12",
+		"@types/lodash": "^4.14.202",
 		"@types/node": "^20.11.1",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
